# syner

./: Cargo.toml
model/: Cargo.toml
model/src/: lib.rs
server/: Cargo.toml
server/src/: client_ip.rs  init_log.rs  main.rs  print.rs  server_model.rs  utils.rs
syner/: Cargo.toml  build.rs
syner/src/: boxed_ptr.rs  client_model.rs  main.rs  utils.rs  winit_helper.rs
syner/ui/: app-window.slint  config.slint  setup-window.slint  ui.slint
