[workspace]
members = ["model", "server", "syner"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
chrono = {version = "0.4"}
dashmap = {version = "6.1", features = ["serde"]}
encoding_rs = {version = "0.8"}
headers = {version = "0.3"}
http = {version = "1.2"}
humantime = {version = "2.1"}
hyper = {version = "1.6"}
i-slint-backend-winit = "1.9.2"
log = {version = "0.4"}
log4rs = {version = "1.3", features = []}
pathdiff = {version = "0.2"}
rmp-serde = "1.3"
serde = {version = "1", features = ["derive"]}
serde_bytes = {version = "0.11"}
sha3 = {version = "0.10"}
slint = {version = "1.9.2", default-features = false, features = ["std", "compat-1-2", "renderer-software", "backend-winit", "software-renderer-systemfonts"]}
slint-build = "1.9.2"
tokio = {version = "1.42", features = ["full"]}
toml = "0.8"
ulid = {version = "1.1", features = ["serde", "uuid"]}
url = {version = "2.5", features = ["serde"]}
uuid = {version = "1.12", features = ["serde"]}
warp = {version = "0.3"}
