[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
anyhow = {workspace = true}
base16ct = {version = "0.2", features = ["alloc"]}
chrono = {workspace = true}
dashmap = {workspace = true}
headers = {workspace = true}
humantime = {workspace = true}
hyper = {workspace = true}
log = {workspace = true}
log4rs = {workspace = true}
model = {path = "../model"}
pathdiff = {workspace = true}
remove_dir_all = {version = "1", features = ["parallel"]}
rmp-serde = {workspace = true}
serde = {workspace = true}
serde_bytes = {workspace = true}
sha3 = {workspace = true}
tokio = {workspace = true}
toml = {workspace = true}
ulid = {workspace = true}
url = {workspace = true}
uuid = {workspace = true, features = ["v6"]}
warp = {workspace = true}

[target.'cfg(windows)'.dependencies]
windows = {version = "0.59", features = ["Win32_System_Console"]}
windows-strings = {version = "0.3"}
