[package]
edition = "2021"
name = "syner"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[dependencies]
anyhow = {workspace = true}
dashmap = {workspace = true}
futures-lite = {version = "2.6"}
i-slint-backend-winit = {workspace = true}
model = {path = "../model"}
rmp-serde = {workspace = true}
serde = {workspace = true}
serde_bytes = {workspace = true}
sha3 = {workspace = true}
slint = {workspace = true, default-features = false, features = ["std", "compat-1-2", "renderer-software", "backend-winit", "software-renderer-systemfonts"]}
surf = {workspace = true}
tokio = {workspace = true}
toml = {workspace = true}
url = {workspace = true}

[build-dependencies]
slint-build = {workspace = true}
